@@ -274,3 +274,4 @@
  21-Oct-2020  V1.641 Add DrugBank brand names to rcsb_chem_comp_synonyms
  23-Oct-2020  V1.642 Add rcsb_repository_holdings_combined_entry collection
  24-Oct-2020  V1.643 Incorporate obsolete/supersede item in rcsb_repository_holdings_combined_entry
+ 28-Oct-2020  V1.644 Make reference alignment options accessible from the configuration file
